objects/TASKRAY__Project_Task__c.object
<CustomObject>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <description>Used to track the date of when the task is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates a TaskRay task to its predecessor using legacy dependencies. Please migrate to multiple dependencies.</description>
        <label>Dependent On (Legacy Dependencies)</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbox</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Marked for Execution</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for Client</fullName>
                </value>
                <value>
                    <fullName>In Progress - Extended</fullName>
                </value>
                <value>
                    <fullName>Finalisation</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#DDDDDD</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#CC6600</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#3333FF</color>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__RepeatCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Every__c</fullName>
        <label>Repeat Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
        <label>Repeat Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not repeat</fullName>
                    <default>true</default>
                    <label>Does not repeat</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
        <label>Repeat Week Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccountCommAccess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to control record sharing with Community users that have license types which utilize Sharing Sets to determine record access.</description>
        <inlineHelpText>Used to grant access to Customer/External Accounts (Sharing Sets only).</inlineHelpText>
        <label>Account (Community Access)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Tasks (Account (Community Access))</relationshipLabel>
        <relationshipName>TaskRay_External_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBillableHours__c</fullName>
        <label>Actual Billable Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBusinessDuration__c</fullName>
        <description>Used to track the number of business days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, excluding nonworking days.</description>
        <inlineHelpText>Number of business days that it took to complete the task.</inlineHelpText>
        <label>Actual Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the task is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the task was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, including nonworking days.</description>
        <formula>IF( 
(TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that it took to complete the task (includes nonworking days).</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the task</description>
        <label>Available for External Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDuration__c</fullName>
        <description>Task duration excluding non-working days as defined by project’s Business Hours.</description>
        <label>Estimated Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHrsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow task to be scheduled for work on non-working day as defined by the project’s Business Hours.</description>
        <label>Override Project Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedAheadOfSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed before its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed before its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Ahead of Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedBehindSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed after its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed after its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Behind Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomTaskWeight__c</fullName>
        <description>Premium-only feature.</description>
        <inlineHelpText>The relative weight of this task compared to others in the task group and project. Represented by a number.</inlineHelpText>
        <label>Custom Task Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDepOffset__c</fullName>
        <label>Dependency Offset (Legacy Dependencies)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <formula>IF( 
(TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHasScheduleConflict__c</fullName>
        <formula>TASKRAY__trLockDates__c &amp;&amp;
NOT(ISBLANK(TASKRAY__Dependent_On__c)) &amp;&amp;
TASKRAY__Deadline__c &lt;  TASKRAY__Dependent_On__r.TASKRAY__Deadline__c</formula>
        <label>Legacy Dependencies Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHidden__c</fullName>
        <formula>IF(OR(ISBLANK(TASKRAY__trHideUntil__c),TASKRAY__trHideUntil__c&lt;=TODAY()) , false, true)</formula>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntilOffset__c</fullName>
        <label>Hide Until (Days Before Start)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntil__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TASKRAY__trHideUntilOffset__c)),NOT(ISBLANK(TASKRAY__trStartDate__c))), TASKRAY__trStartDate__c - TASKRAY__trHideUntilOffset__c, null)</formula>
        <label>Hide Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInternalOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Task is for internal users only.  When set to true, this field restricts external access to a Task.</description>
        <inlineHelpText>Restricts external access to a Task.</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents scheduling updates.</description>
        <label>Lock Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNumberOfTimesBlocked__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to track the number of times the task was marked as blocked.</description>
        <inlineHelpText>Tracks the number of times the task was marked as blocked.</inlineHelpText>
        <label>Number of Times Blocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOngoingTaskProgressPercent__c</fullName>
        <description>Use this field in conjunction with the Ongoing Task Progress Type field to allow incomplete tasks to contribute to Task Group and Project completion.</description>
        <inlineHelpText>This is a premium only feature that allows incomplete tasks to contribute to Task Group and Project completion. The &apos;Ongoing Task Progress Type&apos; must be populated in order to use this feature.</inlineHelpText>
        <label>Ongoing Task Progress Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOngoingTaskProgressType__c</fullName>
        <description>Use this field in conjunction with the Ongoing Task Progress Percent field to allow incomplete tasks to contribute to Task Group and Project completion.</description>
        <inlineHelpText>This is a premium only feature that allows incomplete tasks to contribute to Task Group and Project completion. Time-based OTP utilizes logged time to show task progress, while Custom OTP gives you control over a task&apos;s progress. The &apos;Ongoing Task Progress Percent&apos; value reflects the task&apos;s completion percentage.</inlineHelpText>
        <label>Ongoing Task Progress Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Time-Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPredecessorTasksIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predecessor Tasks Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectBusinessHoursId__c</fullName>
        <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the Project&apos;s assigned business hours.</description>
        <formula>TASKRAY__Project__r.TASKRAY__trBusinessHours__c</formula>
        <label>Project Schedule Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectSortOrder__c</fullName>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trScheduleConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <description>Used to track the date of when the task is scheduled to start.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TASKRAY__Project__c</field>
                <operation>equals</operation>
                <valueField>TASKRAY__trTaskGroup__c.TASKRAY__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>Cloned Tasks</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeType__c</fullName>
        <description>The default time type for this Task.</description>
        <inlineHelpText>Should time entries related to this Task be defaulted to non-billable or billable?</inlineHelpText>
        <label>Default Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTime_Entry_Count__c</fullName>
        <label>Time Entry Count</label>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trWasTaskEverBlocked__c</fullName>
        <description>Used to track whether a task was ever blocked.</description>
        <formula>TASKRAY__trNumberOfTimesBlocked__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether a task was ever blocked.</inlineHelpText>
        <label>Was Task Ever Blocked?</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Task</label>
    <listViews>
        <fullName>Absolute_Aviation_Queue_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Absolute Aviation Queue</label>
        <queue>Absolute_Aviation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCS_Queue_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>CCS Queue</label>
        <queue>CCS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Master_Drilling_Queue_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Master Drilling Queue</label>
        <queue>Master_Drilling_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PCDS_Queue_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>PCDS Queue</label>
        <queue>PCDS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TASKRAY__AllProjectTasks</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__trTaskGroup__c</columns>
        <columns>TASKRAY__Deadline__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Project Tasks</label>
    </listViews>
    <listViews>
        <fullName>X43_Air_School_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>43 Air School</label>
        <queue>X43_Air_School</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>trUnassigned_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Added to TaskRay Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>TASKRAY__Internal_Only_Restricted_to_Proj_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the Project Owner from changing the Internal Only field.</description>
        <errorConditionFormula>ISCHANGED(TASKRAY__trInternalOnly__c) &amp;&amp; $User.Id &lt;&gt;  TASKRAY__Project__r.OwnerId</errorConditionFormula>
        <errorMessage>Only the Project Owner can modify the Internal Only field on Tasks. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Prevent_Complete_If_Dependent_Incomplete</fullName>
        <active>false</active>
        <description>This validation rule will prevent the completion of a task when its predecessor task is incomplete.</description>
        <errorConditionFormula>ISCHANGED(TASKRAY__trCompleted__c) &amp;&amp;
TASKRAY__trCompleted__c  = TRUE &amp;&amp; TASKRAY__trPredecessorTasksIncomplete__c = TRUE</errorConditionFormula>
        <errorMessage>This task cannot be completed because it has a predecessor task which is not complete.</errorMessage>
    </validationRules>
</CustomObject>